zapala request full bakan

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,4 +45,5 @@ servicio.app.uri.prueba : /prueba
 servicio.app.uri.pruebaParametros : /prueba/{idprueba}
 #metodos GET POST PUT
 servicio.app.uri.buscarUsuario=/buscar-usuario
+servicio.app.uri.actualizarUsuario=/actualizar-usuario
 
