--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,9 @@ eureka.client.service-url.defaultZone=${EUREKA_SERVER}
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 390000
 ribbon.ConnectTimeout: 9000
 ribbon.ReadTimeout: 30000
+#### Spring ZIPKIN
+spring.sleuth.sampler.probability=1.0
+spring.zipkin.base-utl=http://localhost:9411/
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.cloud.gcp.sql.database-name=oauth
