cosas para que a pecho le levante

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,4 +49,6 @@ servicio.app.uri.pruebaParametros : /prueba/{idprueba}
 #metodos GET POST PUT
 servicio.app.uri.buscarUsuario=/buscar-usuario
 servicio.app.uri.actualizarUsuario=/actualizar-usuario
+servicio.app.uri.crearSeguridadSessionPlataforma : /crear-sessionplataforma
+servicio.app.uri.buscarxKeySeguridadSessionPlataforma : /buscar-sessionplataformaxkey
 
