--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 		<swagger.version>2.9.2</swagger.version>
 		<spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
 		<ragnax.domain>1.0.0-SNAPSHOT</ragnax.domain>
+		<ragnax.utilidades>1.0.0-SNAPSHOT</ragnax.utilidades>
 		<jacoco.version>0.8.3</jacoco.version>
 	</properties>
 	<dependencies>
@@ -108,6 +109,16 @@
 			<groupId>com.ragnax</groupId>
 			<artifactId>ragnax-domain</artifactId>
 			<version>${ragnax.domain}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.ragnax</groupId>
+			<artifactId>ragnax-utilidades</artifactId>
+			<version>${ragnax.utilidades}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
 		</dependency>
 	</dependencies>
 	
